Adaptation Benefit + Correction text-align: center

--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -97,6 +97,7 @@
   font-weight: 400
   font-size: 40px
   line-height: 48px
+  text-align: center
   @media screen and ( max-width: 576px )
     font-size: 32px
     line-height: 34px
