--- a/src/sass/chunk/_hero.sass
+++ b/src/sass/chunk/_hero.sass
@@ -36,6 +36,7 @@
   &__title
     margin: 0
     margin-bottom: 10px
+    text-align: inherit
     @media screen and ( max-width: 768px )
       margin-bottom: 0
 
