--- a/src/sass/chunk/_order.sass
+++ b/src/sass/chunk/_order.sass
@@ -45,6 +45,7 @@
     font-size: 30px
     line-height: 37px
     color: $white
+    text-align: inherit
 
   &__text
     margin: 0
