--- a/src/sass/chunk/_places.sass
+++ b/src/sass/chunk/_places.sass
@@ -12,7 +12,6 @@
 
   &__title
     margin-bottom: 20px
-    text-align: center
 
   &__descr
     &--orange
