--- a/src/sass/chunk/_services.sass
+++ b/src/sass/chunk/_services.sass
@@ -13,7 +13,6 @@
 
   &__title
     margin-bottom: 5px
-    text-align: center
 
   &__descr
     &--orange
