--- a/src/sass/chunk/_steps.sass
+++ b/src/sass/chunk/_steps.sass
@@ -30,7 +30,6 @@
 
   &__title
     margin-bottom: 65px
-    text-align: center
     @media screen and ( max-width: 768px )
       margin-bottom: 45px
     @media screen and ( max-width: 576px )
